# osd_text_extractor

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  a.py  coverage.xml  main.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/osd_text_extractor/: __init__.py
src/osd_text_extractor/application/exceptions/: exceptions.py
src/osd_text_extractor/domain/entities/: plain_text.py
src/osd_text_extractor/domain/exceptions/: exceptions.py
src/osd_text_extractor/domain/interfaces/: __init__.py  extractor_factory.py
src/osd_text_extractor/infrastructure/di/: container.py  providers.py
src/osd_text_extractor/infrastructure/exceptions/: exceptions.py
src/osd_text_extractor/infrastructure/extractors/: _csv.py  _docx.py  _epub.py  _fb2.py  _html.py  _json.py  _md.py  _ods.py  _odt.py  _pdf.py  _rtf.py  _txt.py  _xlsx.py  _xml.py
src/osd_text_extractor/infrastructure/extractors/utils/: decode_to_utf8.py
src/osd_text_extractor/presentation/: __init__.py  facade.py  fasade.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/test_application/: test_application_exceptions.py  test_use_cases.py
tests/unit/test_domain/: test_domain_entities.py  test_domain_exceptions.py  test_plain_text.py
tests/unit/test_infrastructure/: test_extractor_factory.py  test_extractors.py  test_infrastructure_exceptions.py  test_utils.py
tests/unit/test_presentation/: test_facade.py
