[metadata]
name = osd_text_extractor
version = 0.1.0
author = OneSlap Team
author_email = lxarbuz@gmail.com
description = Module to extract plain text from different formats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/my_package
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = my_package
packages = find:
python_requires = >=3.6